# ft_strace

./: .gitignore  CMakeLists.txt  Makefile  readme.md
cmd/: ft_strace.c  ft_strace.h  libtrace.c  libtrace.h  parsing.c  signals.c  signals.h  syscalls.c  syscalls.h  trace_loop.c  trace_print.c  utils.c
pkg/ft_error/: ft_error.h  log_error.c  panic.c
pkg/ft_log/: ft_log.h  ft_lognbr.c  ft_lognbr_in_between.c  ft_logstr.c  print_level.c
pkg/ft_memory/: ft_bzero.c  ft_memory.h  zeroed_malloc.c
pkg/ft_print/: ft_print.c  ft_print.h  ft_putchar.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_base_padded.c  ft_putnbr_in_between.c  ft_putstr.c
pkg/ft_string/: ft_is_alnum.c  ft_is_alpha.c  ft_string.h  ft_string_concat.c  ft_strlen.c  ft_to_lower.c  get_after_n_sep.c  string.c
